--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: backend-django
     ports:
-      - 8000:8000
+      - "8000:8000"
     environment:
       DJANGO_ENV: production
       DEFAULT_DB_NAME: postgres
@@ -16,5 +16,9 @@ services:
     build: ./postgresql
     container_name: postgres-db
     restart: always
+    ports:
+      - "127.0.0.1:5432:5432"
+    volumes:
+      - /var/run/postgresql:/var/run/postgresql
     environment:
       POSTGRES_PASSWORD: hello
