--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,6 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - /var/lib/postgresql/data:/var/lib/postgresql/data/
     environment:
       POSTGRES_PASSWORD: hello
