feat: handle projects secrets by env

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
+# editor
 *.pyc
-.vscode/
-/.idea
 .idea/*
+/.idea
+.vscode/
 __pycache__/
+
+# virtualenv
 venv/
+
+# test
 *.coverage
 .coverage
+
+# db
 *.sqlite3
+
+# env
+.env.development
+.env.production
