--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
       - "127.0.0.1:5432:5432"
     volumes:
       - /var/lib/postgresql/data:/var/lib/postgresql/data/
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    env_file:
+      - ./envs/.env.production
 
   redis:
     build: ./redis
@@ -22,6 +22,5 @@ services:
       - "127.0.0.1:8000:8000"
     environment:
       DJANGO_ENV: production
-      DEFAULT_DB_NAME: postgres
-      DEFAULT_DB_USER: postgres
-      DEFAULT_DB_PASSWD: ${POSTGRES_PASSWORD}
+    env_file:
+      - ./envs/.env.production
