--- a/envs/.env.sample
+++ b/envs/.env.sample
@@ -1,2 +1,9 @@
 SECRET_KEY=example
+
+DJANGO_ENV=example
+
+POSTGRES_NAME=example
+POSTGRES_USER=example
+POSTGRES_PASSWORD=example
+
 KAVENEGAR_API=example
