--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,5 +1,5 @@
 FROM redis:latest
 
-# COPY redis.conf /usr/local/etc/redis/redis.conf
+COPY redis.conf /usr/local/etc/redis/redis.conf
 
-# CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
