FIX: manage envs as lists

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     volumes:
       - /var/lib/postgresql/data:/var/lib/postgresql/data/
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD:${POSTGRES_PASSWORD}
 
   redis:
     build: ./redis
@@ -21,9 +21,9 @@ services:
     ports:
       - "127.0.0.1:8000:8000"
     environment:
-      DJANGO_ENV: ${DJANGO_ENV}
-      SECRET_KEY: ${SECRET_KEY}
-      POSTGRES_NAME: ${POSTGRES_NAME}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      KAVENEGAR_API: ${KAVENEGAR_API}
+      - DJANGO_ENV:${DJANGO_ENV}
+      - SECRET_KEY:${SECRET_KEY}
+      - POSTGRES_NAME:${POSTGRES_NAME}
+      - POSTGRES_USER:${POSTGRES_USER}
+      - POSTGRES_PASSWORD:${POSTGRES_PASSWORD}
+      - KAVENEGAR_API:${KAVENEGAR_API}
